# compiler

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: README.md  开发清单.md  架构设计.md  测试说明.md  运行方式.md
docs/Architecture/: README.md
docs/Architecture/backend/: Backend二层超细化版.md  Backend架构详解.md
docs/Architecture/diagnostics/: 诊断测试框架.md  错误码表.md
docs/Architecture/frontend/: Frontend二层超细化版.md  Frontend架构详解.md
docs/Architecture/ir/: IR二层超细化版.md  IR架构详解.md  llvmIR.md
docs/Architecture/ir/devlog/: ir设计.md  ir迁移.md  开发日志.md
scripts/: ci_test_plan.txt  package.py  run_ci_tests.sh
src/: CompilerDriver.cpp  CompilerDriver.h  main.cpp
src/backend/: Asm.cpp  AsmCodeGenerator.cpp  BackendDriver.cpp  CodeGenerator.cpp  CodeGeneratorAsm.cpp  FrameLayout.cpp  IRAdapter.cpp  InstructionSelector.cpp  MachineAsmLowering.cpp  MachineCFG.cpp  MachineIR.cpp  MachineLiveness.cpp  NaiveRegisterAllocator.cpp
src/backend/include/: Asm.h  AsmCodeGenerator.h  BackendDriver.h  CodeGenerator.h  CodeGeneratorAsm.h  FrameLayout.h  IRAdapter.h  InstructionSelector.h  MachineAsmLowering.h  MachineCFG.h  MachineIR.h  MachineLiveness.h  NaiveRegisterAllocator.h
src/backend/riscv64/: CodeGeneratorRiscv64.cpp  CodeGeneratorRiscv64.h  ILocRiscv64.cpp  ILocRiscv64.h  InstSelectorRiscv64.cpp  InstSelectorRiscv64.h  PlatformRiscv64.cpp  PlatformRiscv64.h  SimpleRegisterAllocator.cpp  SimpleRegisterAllocator.h
src/frontend/: AST.cpp  ASTGenerator.cpp  Ast.cpp  CSTVisitor.cpp  FrontEndExecutor.cpp  Graph.cpp  RecursiveDescentExecutor.cpp
src/frontend/antlr4/: MiniC.g4
src/frontend/include/: AST.h  ASTGenerator.h  Ast.h  AttrType.h  CSTVisitor.h  FrontEndExecutor.h  Graph.h  RecursiveDescentExecutor.h
src/ir/: BasicBlock.cpp  Function.cpp  IRBuilder.cpp  IRCode.cpp  IRGenerator.cpp  Instruction.cpp  Module.cpp  Use.cpp  User.cpp  Value.cpp
src/ir/Instructions/: AllocaInst.cpp  AllocaInst.h  ArgInstruction.cpp  ArgInstruction.h  BinaryInst.cpp  BinaryInst.h  BinaryInstruction.cpp  BinaryInstruction.h  BranchInst.cpp  BranchInst.h  CallInst.cpp  CallInst.h  CastInst.cpp  CastInst.h  CondBranchInstruction.cpp  CondBranchInstruction.h  EntryInstruction.cpp  EntryInstruction.h  ExitInstruction.cpp  ExitInstruction.h  FCmpInst.cpp  FCmpInst.h  FuncCallInstruction.cpp  FuncCallInstruction.h  GetElementPtrInst.cpp  GetElementPtrInst.h  GotoInstruction.cpp  GotoInstruction.h  ICmpInst.cpp  ICmpInst.h  LabelInstruction.cpp  LabelInstruction.h  LoadInst.cpp  LoadInst.h  MoveInstruction.cpp  MoveInstruction.h  PhiInst.cpp  PhiInst.h  ReturnInst.cpp  ReturnInst.h  (+4 more)
src/ir/Types/: ArrayType.h  FloatType.cpp  FloatType.h  FunctionType.h  IntegerType.cpp  IntegerType.h  LabelType.cpp  LabelType.h  PointerType.h  VoidType.cpp  VoidType.h
src/ir/Values/: ConstFloat.h  ConstInt.h  FormalParam.h  GlobalVariable.h  LocalVariable.h  MemVariable.h  RegVariable.h  ZeroInitializer.h
src/ir/emit/: LLVMTextEmitter.cpp  LLVMTextEmitter.h
src/ir/include/: BasicBlock.h  Constant.h  Function.h  GlobalValue.h  IRBuilder.h  IRCode.h  IRConstant.h  IRGenerator.h  Instruction.h  Module.h  Type.h  Use.h  User.h  Value.h
src/symboltable/: ScopeStack.cpp  ScopeStack.h
src/utils/: Status.cpp  Status.h
test/: test.md
test/contesttestcases/lib/: std.c  std.h
test/stage1_params/: array_assign_regression.c  change_const_var.c  const_not_init.c  for_basic.c  for_break_continue.c  for_optional.c  for_self_update.c  param_arg_too_few.c  param_arg_too_many.c  param_assign.c  param_basic.c  param_call_undef.c  param_duplicate.c  param_func_redef.c  param_global_init_nonconst.c  param_multi.c  param_nested.c  param_redeclare_local.c  param_stack10.c  param_undef_var.c  recursion_test.c  self_inc_dec.c  self_inc_dec.out
