cmake_minimum_required(VERSION 3.20)

project(compiler LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(Java COMPONENTS Runtime REQUIRED)

set(GRAPHVIZ_HINTS
  /opt/homebrew/opt/graphviz
  /usr/local/opt/graphviz
)

find_path(GRAPHVIZ_INCLUDE_DIR
  NAMES gvc.h
  HINTS ${GRAPHVIZ_HINTS}
  PATH_SUFFIXES include/graphviz
)

find_library(GRAPHVIZ_GVC_LIBRARY
  NAMES gvc
  HINTS ${GRAPHVIZ_HINTS}
  PATH_SUFFIXES lib
)

find_library(GRAPHVIZ_CGRAPH_LIBRARY
  NAMES cgraph
  HINTS ${GRAPHVIZ_HINTS}
  PATH_SUFFIXES lib
)

find_library(GRAPHVIZ_CDT_LIBRARY
  NAMES cdt
  HINTS ${GRAPHVIZ_HINTS}
  PATH_SUFFIXES lib
)

if(NOT GRAPHVIZ_INCLUDE_DIR OR NOT GRAPHVIZ_GVC_LIBRARY OR NOT GRAPHVIZ_CGRAPH_LIBRARY OR NOT GRAPHVIZ_CDT_LIBRARY)
  message(FATAL_ERROR
    "Graphviz development files not found. Install them with 'brew install graphviz' "
    "or set GRAPHVIZ_INCLUDE_DIR / GRAPHVIZ_GVC_LIBRARY / GRAPHVIZ_CGRAPH_LIBRARY / GRAPHVIZ_CDT_LIBRARY manually."
  )
endif()

set(ANTLR4_RUNTIME_HINTS
  /opt/homebrew/opt/antlr4-cpp-runtime
  /usr/local/opt/antlr4-cpp-runtime
)

find_path(ANTLR4_RUNTIME_INCLUDE_DIR
  NAMES antlr4-runtime.h
  HINTS ${ANTLR4_RUNTIME_HINTS}
  PATH_SUFFIXES include/antlr4-runtime include
)

find_library(ANTLR4_RUNTIME_LIBRARY
  NAMES antlr4-runtime
  HINTS ${ANTLR4_RUNTIME_HINTS}
  PATH_SUFFIXES lib
)

if(NOT ANTLR4_RUNTIME_INCLUDE_DIR OR NOT ANTLR4_RUNTIME_LIBRARY)
  message(FATAL_ERROR
    "ANTLR4 C++ runtime not found. Install it with 'brew install antlr4-cpp-runtime' "
    "or set ANTLR4_RUNTIME_INCLUDE_DIR and ANTLR4_RUNTIME_LIBRARY manually."
  )
endif()

set(ANTLR4_JAR "${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/antlr-4.13.2-complete.jar")
set(ANTLR4_GRAMMAR_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/frontend/antlr4")
set(ANTLR4_GRAMMAR "${ANTLR4_GRAMMAR_DIR}/MiniC.g4")
set(ANTLR4_GENERATED_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/frontend/autogenerated")
set(ANTLR4_GENERATED_CPP_FILES
  "${ANTLR4_GENERATED_DIR}/MiniCLexer.cpp"
  "${ANTLR4_GENERATED_DIR}/MiniCParser.cpp"
  "${ANTLR4_GENERATED_DIR}/MiniCBaseVisitor.cpp"
  "${ANTLR4_GENERATED_DIR}/MiniCVisitor.cpp"
)
set(ANTLR4_GENERATED_HEADER_FILES
  "${ANTLR4_GENERATED_DIR}/MiniCLexer.h"
  "${ANTLR4_GENERATED_DIR}/MiniCParser.h"
  "${ANTLR4_GENERATED_DIR}/MiniCBaseVisitor.h"
  "${ANTLR4_GENERATED_DIR}/MiniCVisitor.h"
)
set(ANTLR4_GENERATED_FILES
  ${ANTLR4_GENERATED_CPP_FILES}
  ${ANTLR4_GENERATED_HEADER_FILES}
  "${ANTLR4_GENERATED_DIR}/MiniC.interp"
  "${ANTLR4_GENERATED_DIR}/MiniC.tokens"
  "${ANTLR4_GENERATED_DIR}/MiniCLexer.interp"
  "${ANTLR4_GENERATED_DIR}/MiniCLexer.tokens"
)

if(NOT EXISTS "${ANTLR4_JAR}")
  message(FATAL_ERROR "ANTLR4 tool jar not found: ${ANTLR4_JAR}")
endif()

add_custom_command(
  OUTPUT ${ANTLR4_GENERATED_FILES}
  COMMAND "${CMAKE_COMMAND}" -E make_directory "${ANTLR4_GENERATED_DIR}"
  COMMAND "${Java_JAVA_EXECUTABLE}" -jar "${ANTLR4_JAR}" -Dlanguage=Cpp -visitor -no-listener -o "${ANTLR4_GENERATED_DIR}" "MiniC.g4"
  WORKING_DIRECTORY "${ANTLR4_GRAMMAR_DIR}"
  MAIN_DEPENDENCY "${ANTLR4_GRAMMAR}"
  DEPENDS "${ANTLR4_JAR}"
  COMMENT "Generating ANTLR4 C++ sources into ${ANTLR4_GENERATED_DIR}"
  VERBATIM
)

add_custom_target(generate_antlr4_cpp DEPENDS ${ANTLR4_GENERATED_FILES})

file(GLOB_RECURSE COMPILER_SOURCES
  CONFIGURE_DEPENDS
  "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

list(FILTER COMPILER_SOURCES EXCLUDE REGEX ".*/src/frontend/autogenerated/.*\\.cpp$")

add_executable(compiler ${COMPILER_SOURCES} ${ANTLR4_GENERATED_CPP_FILES})
add_dependencies(compiler generate_antlr4_cpp)

target_include_directories(compiler PRIVATE
  "${CMAKE_CURRENT_SOURCE_DIR}/src"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/frontend/include"
  "${ANTLR4_GENERATED_DIR}"
  "${ANTLR4_RUNTIME_INCLUDE_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/ir/include"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/utils"
  "${GRAPHVIZ_INCLUDE_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/backend/include"
)

target_compile_definitions(compiler PRIVATE
  USE_GRAPHVIZ
)

target_link_libraries(compiler PRIVATE
  "${ANTLR4_RUNTIME_LIBRARY}"
  "${GRAPHVIZ_GVC_LIBRARY}"
  "${GRAPHVIZ_CGRAPH_LIBRARY}"
  "${GRAPHVIZ_CDT_LIBRARY}"
)
